# GABGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SmokeBuch.sln  build.bat  build.sh  glad.c  imgui.ini  scene.json
InHale/: APP.cpp  Camera.cpp  Camera.h  EBO.h  InHale.vcxproj  InHale.vcxproj.filters  Shaderclass.cpp  Shaderclass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.h  default.vert
SmokeBuch/: .clangd  SmokeBuch.sln  build.sh
SmokeBuch/SmokeBuch/: SmokeBuch.vcxproj  SmokeBuch.vcxproj.filters
SmokeBuch/SmokeBuch/Debug/: vc143.idb
SmokeBuch/SmokeBuch/Debug/SmokeBuch.tlog/: CL.command.1.tlog  SmokeBuch.lastbuildstate
SmokeBuch/SmokeBuch/res/shaders/: Basic.frag  Basic.vert  CubeMap.frag  CubeMap.vert  LightSource.frag  LightSource.vert
SmokeBuch/SmokeBuch/src/: Engine.cpp  Engine.h  Main.cpp
SmokeBuch/SmokeBuch/src/Core/: Audio.h  Camera.h  ControllerASCII.h  Input.h  Inputs.cpp  Window.cpp  Window.h
SmokeBuch/SmokeBuch/src/Renderer/: Engine.cpp  Engine.h  Main.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
SmokeBuch/src/: assets.h  engine_res.h  game.cpp  game.h  gl_renderer.cpp  input.h  main.cpp  platform.h  render_interface.h  shader_header.h  sound.h  ui.h  win32_platform.cpp
bin-int/Debug-x64/InHale/: InHale.exe.recipe  InHale.ilk  vc143.idb
bin-int/Debug-x64/InHale/InHale.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  (+2 more)
bin-int/Debug-x64/SmokeBuch/: SmokeBuch.dll.recipe  SmokeBuch.ilk  vc143.idb
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
res/: imgui.ini
res/cube/: Creeper.mtl
res/harry/: harry.glb
res/lowpoly/: MS1.glb  MaleSurvivor1.glb
res/map/: objHouse.mtl
res/map/.mayaSwatches/: House.mb.swatches
res/models/: aidkit.glb  aidkit_convex.glb  pistol.glb  pistol_convex.glb  pistolammo.glb  pistolammo_convex.glb  shotgun.glb  shotgun_convex.glb  shotgunammo.glb  shotgunammo_convex.glb  sphere.glb  stylized_lowpoly_lamp.glb
res/models/radio/: radio.mtl
res/scenes/: scene.json
res/shaders/: 2D.glsl  OLDgeometry.glsl  Renderer2D_2DQuad.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer3D_Model.glsl  Renderer3D_static.glsl  anim_model.frag  anim_model.glsl  anim_model.vert  basic.frag  basic.glsl  batch_line.glsl  batch_quad.glsl  bloom.glsl  bloom_downsample.glsl  bloom_final.glsl  bloom_upsample.glsl  camera.frag  direct_shadowFB.glsl  finalFB.glsl  geometry.glsl  geometry_z_prepass.glsl  light.glsl  light.vert  light_box.glsl  mainFB.frag  mainFB.glsl  model.frag  model.glsl  model.vert  omni_shadowFB.glsl  particle.glsl  physics_debug.glsl  point_shadow.glsl  skybox.glsl  static_anim_model.glsl  test.glsl  text_shader.glsl
res/stairs/: Stairs.mtl
res/zombie/: Zombie_Idle.dae
resources/: CMakeLists.txt
scenes/: scene.json
src/: AnimatedModel.h  BackendLogger.h  Bloom.cpp  Bloom.h  Camera.h  Cube.h  Engine.cpp  Engine.h  FrameBuffer.h  Input.cpp  Input.h  Light.h  LightManager.h  LoadModel.h  LoadSSBO.h  LoadShader.h  LoadText.h  LoadTexture.h  MapEditor.h  Mesh.h  Model.h  PhysX.cpp  PhysX.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneEditor.h  Shader.h  Skybox.h  Util.h  Utilities.hpp  Window.cpp  Window.h  main.cpp  openglErrorReporting.cpp  stb_image.h
src/AssetManager/: AssetManager.cpp  AssetManager.h  Types.h
src/Backend/: AssetManager.cpp  AssetManager.h  Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  BackendLogger.cpp  BackendLogger.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Config.cpp  Config.h  CustomFrameRate.hpp  DeltaTime.cpp  DeltaTime.h  DeltaTime.hpp  Editor.cpp  Editor.h  Engine.cpp  Engine.h  FontManager.cpp  FontManager.h  FrameBuffer.cpp  FrameBuffer.h  Layer.h  LayerStack.cpp  LayerStack.h  LightManager.cpp  LightManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  ParticleRenderer.cpp  (+38 more)
src/DAE/: Animation.h  Animator.h  Animdata.h  Assimp_glm_helpers.h  Bone.h  DAEloader.h
src/Editor/: CameraEditor.cpp  CameraEditor.h  Editor.cpp  Editor.h  ImGuiLayer.cpp  ImGuiLayer.h  MCEditor.cpp  MCEditor.h  SCEditor.cpp  SCEditor.h
src/FrameBuffers/: Bloom.cpp  Bloom.h  ShadowFrameBuffer.cpp  ShadowFrameBuffer.h
src/GL/: OpenGLContext.cpp  OpenGLContext.h
src/Input/: ApplicationEvent.h  EngineEvent.h  Event.h  Input.h  KeyCodes.h  KeyEvent.h  Key_Values.h  MouseCodes.h  MouseEvent.h  UserInput.cpp  UserInput.h
src/Managers/: AnimatedMesh.h  AnimatedModel.h  AnimationSystem.h  Bone.h  EnvironmentMap.h  Light.h  LightManager.h  Mesh.h  ModelManager.h  StaticModel.h  TextManager.h
src/Renderer/: Camera.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Scene/: Components.hpp  Entity.hpp  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
src/app/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Editor.cpp  Editor.h  Scene.hpp
src/game/: Application.cpp  Application.h  AssetManager.cpp  Editor.cpp  Editor.h  game.cpp  game.h
src2/: Engine.cpp  Engine.h
src2/Backend/: BackendLogger.h  DeltaTime.h  Layer.cpp  LayerStack.h  MainWindow.cpp  MainWindow.h  UUID.cpp  Windowbase.h
src2/Editor/: ImGuiLayer.cpp  ImGuiLayer.h  MCEditor.cpp
src2/Input/: KeyCodes.h  UserInput.cpp  UserInput.h
src2/Renderer/: Buffer.cpp  Buffer.h  Camera.h  GraphicsContext.cpp  GraphicsContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp
src2/Scene/: Scene.cpp  Scene.h
srcOG/: Engine.cpp  Engine.h  LoadSSBO.h  LoadShader.h  LoadTexture.h  PhysX.h  SceneEditor.h  Utilities.hpp  Window.cpp  main.cpp
srcOG/AssetManager/: AssetManager.h  Types.h
srcOG/FrameBuffers/: Bloom.cpp  Bloom.h
srcOG/Input/: Input.cpp  Key_Values.h
srcOG/Managers/: AnimatedMesh.h  AnimatedModel.h  AnimationSystem.h  Animdata.h  Assimp_glm_helpers.h  Bone.h  EnvironmentMap.h
(+8 files in other folders)
